--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "type": "git",
     "url": "git+https://github.com/Clever/components.git"
   },
+  "main": "index.js",
   "bugs": {
     "url": "https://github.com/Clever/components/issues"
   },
   "homepage": "https://github.com/Clever/components",
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
+  },
+  "devDependencies": {
+    "css-loader": "^0.23.1",
+    "jsx-loader": "^0.13.2",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.2",
+    "react": "^0.14.7",
+    "style-loader": "^0.13.0"
   }
 }
