--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "ignore-styles": "^1.2.0",
     "jsx-loader": "^0.13.2",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
-    "react": "^0.14.7",
+    "mocha": "^2.4.5",
+    "react": "^0.14.8",
+    "react-addons-test-utils": "^0.14.8",
     "react-dom": "^0.14.7",
+    "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
