--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
     "css-loader": "^0.23.1",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
     "file-loader": "^0.8.5",
     "ignore-styles": "^1.2.0",
     "jsx-loader": "^0.13.2",
