--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/Clever/components.git"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "bugs": {
     "url": "https://github.com/Clever/components/issues"
   },
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
+    "babel-cli": "^6.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
