add text form input
change name to text input

update styles

remove underscore dependency

fix border transitions and remove label transitions

add basic tests

add on focus test

rename input fields in docs

rename component name to textinput in readme

move running locally to contributing

add height to better support ie

--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   },
   "scripts": {
     "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch"
-  }
+  },
+  "dependencies": {}
 }
