--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch"
+    "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch --host 192.168.50.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.14.1"
+  }
 }
