--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch --host 192.168.50.4"
+    "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch"
   },
   "dependencies": {
     "lodash": "^4.14.1"
