Update the SegmentedControl to support more use cases.
Ran into a few corner cases when using SegmentedControl in context in the
Schools Dashboard.
- Reducing font size to better fit with typical text sizes.
- Polishing up styling issues.
- Adding a disabled state

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "lodash": "^4.14.1",
     "react-copy-to-clipboard": "^4.2.1"
   }
