Add object destructuring support to babel compilation.

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
     "react"
   ],
   "plugins": [
-    "transform-object-assign"
+    "transform-es2015-destructuring",
+    "transform-object-assign",
+    "transform-object-rest-spread"
   ]
 }
