--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "less-loader": "^2.2.3",
     "lodash": "^4.14.1",
     "react-copy-to-clipboard": "^4.2.1",
+    "react-select": "^1.0.0-beta14",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7"
   }
