--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "0.6.5",
+  "version": "0.7.0",
   "description": "A library of helpful React components",
   "repository": {
     "type": "git",
@@ -19,7 +19,9 @@
     "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-object-assign": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
@@ -31,9 +33,9 @@
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
     "mocha": "^2.4.5",
-    "react": "^0.14.8",
-    "react-addons-test-utils": "^0.14.8",
-    "react-dom": "^0.14.7",
+    "react": "~15.3.0",
+    "react-addons-test-utils": "~15.3.0",
+    "react-dom": "~15.3.0",
     "sinon": "^1.17.3",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
@@ -42,6 +44,7 @@
     "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "jsx-loader": "^0.13.2",
