--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^1.2.0",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
