--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-core": "^6.7.4",
+    "babel-cli": "~6.0.0",
+    "babel-core": "~6.7.4",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
-    "babel-plugin-transform-object-assign": "^6.5.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.7.2",
+    "babel-plugin-transform-es2015-destructuring": "~6.9.0",
+    "babel-plugin-transform-object-assign": "~6.5.0",
+    "babel-plugin-transform-object-rest-spread": "~6.8.0",
+    "babel-preset-es2015": "~6.6.0",
+    "babel-preset-react": "~6.5.0",
+    "babel-register": "~6.7.2",
     "enzyme": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
