--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-copy-to-clipboard": "^4.2.1",
     "react-select": "^1.0.0-beta14",
     "style-loader": "^0.13.0",
+    "stylelint-webpack-plugin": "^0.4.0",
     "url-loader": "^0.5.7"
   }
 }
