--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clever-components",
-  "version": "0.14.2",
-  "description": "A library of helpful React components",
+  "version": "0.14.3",
+  "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Clever/components.git"
