--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,7 @@
-image: node0.10
+image: clever/drone-node:6.2.2
 publish:
   npm:
-    email: $$npm_drone_email
-    password: $$npm_drone_password
-    registry: https://registry.npmjs.org
-    username: $$npm_drone_username
+    token: $$npm_token
     when:
       branch: master
   s3:
@@ -18,5 +15,4 @@ publish:
     when:
       branch: master
 script:
-- nvm install v5.7.1 &> /dev/null
 - ./test_drone.sh
