--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.3",
     "babel-cli": "~6.0.0",
     "babel-core": "~6.7.4",
     "babel-eslint": "^6.0.2",
@@ -35,6 +36,7 @@
     "jsdom-global": "^1.7.0",
     "lorem-ipsum": "^1.0.3",
     "mocha": "^2.4.5",
+    "postcss-loader": "^1.1.1",
     "react": "~15.3.0",
     "react-addons-test-utils": "~15.3.0",
     "react-dom": "~15.3.0",
