--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "enzyme": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
+    "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
@@ -37,9 +38,11 @@
     "lorem-ipsum": "^1.0.3",
     "mocha": "^2.4.5",
     "postcss-loader": "^1.1.1",
+    "prismjs": "^1.5.1",
     "react": "~15.3.0",
     "react-addons-test-utils": "~15.3.0",
     "react-dom": "~15.3.0",
+    "react-router": "^3.0.0",
     "sinon": "^1.17.3",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
