fix invalid value for value-list-comma-space-after

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -17,7 +17,7 @@
     "no-duplicate-selectors": true,
     "rule-nested-empty-line-before": ["always", {except: ["first-nested"]}],
     "selector-no-id": true,
-    "value-list-comma-space-after": true,
+    "value-list-comma-space-after": "always-single-line",
     "value-list-comma-newline-after": "always-multi-line",
     "unit-whitelist": ["em", "rem", "%", "s", "vh", "ms"],
   }
