--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "less": "^2.6.1",
+    "lodash": "^4.14.1",
+    "react-bootstrap": "^0.30.0",
+    "react-copy-to-clipboard": "^4.2.1",
+    "react-select": "^1.0.0-beta14"
+  },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "babel-cli": "~6.0.0",
@@ -26,15 +34,19 @@
     "babel-preset-es2015": "~6.6.0",
     "babel-preset-react": "~6.5.0",
     "babel-register": "~6.7.2",
+    "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "ignore-styles": "^5.0.1",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
+    "jsx-loader": "^0.13.2",
+    "less-loader": "^2.2.3",
     "lorem-ipsum": "^1.0.3",
     "mocha": "^2.4.5",
     "postcss-loader": "^1.1.1",
@@ -44,24 +56,12 @@
     "react-dom": "~15.3.0",
     "react-router": "^3.0.0",
     "sinon": "^1.17.3",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   },
   "scripts": {
     "dev-server": "node_modules/.bin/webpack-dev-server --content-base docs/ --inline --watch"
-  },
-  "dependencies": {
-    "classnames": "^2.2.5",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "jsx-loader": "^0.13.2",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.3",
-    "lodash": "^4.14.1",
-    "react-copy-to-clipboard": "^4.2.1",
-    "react-select": "^1.0.0-beta14",
-    "style-loader": "^0.13.0",
-    "stylelint-webpack-plugin": "^0.4.0",
-    "url-loader": "^0.5.7"
   }
 }
