--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "0.22.1",
+  "version": "0.22.2",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -18,11 +18,13 @@
     "classnames": "^2.2.5",
     "less": "^2.6.1",
     "lodash": "^4.14.1",
+    "numeral": "^2.0.4",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
     "react-copy-to-clipboard": "^4.2.1",
     "react-dropzone": "^3.11.0",
-    "react-select": "^1.0.0-beta14"
+    "react-select": "^1.0.0-beta14",
+    "short-number": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
