--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,17 @@
 {
   "presets": [
     "es2015",
-    "react"
+    "react",
+    "stage-3"
   ],
   "plugins": [
     "transform-es2015-destructuring",
     "transform-object-assign",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true,
+    }]
   ]
 }
