--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "babel-plugin-transform-es2015-destructuring": "~6.9.0",
     "babel-plugin-transform-object-assign": "~6.5.0",
     "babel-plugin-transform-object-rest-spread": "~6.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "~6.6.0",
     "babel-preset-react": "~6.5.0",
+    "babel-preset-stage-3": "^6.22.0",
     "babel-register": "~6.7.2",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
@@ -61,6 +64,7 @@
     "react-router": "^3.0.0",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
+    "stylelint": "^7.9.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
