--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clever-components",
   "version": "0.23.2",
+  "version": "0.24.1",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
