--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
     "react-copy-to-clipboard": "^4.2.1",
+    "react-datepicker": "^0.44.0",
     "react-dropzone": "^3.11.0",
+    "react-fontawesome": "^1.5.0",
     "react-select": "^1.0.0-beta14",
     "short-number": "^1.0.6"
   },
