--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "classnames": "^2.2.5",
     "less": "^2.6.1",
     "lodash": "^4.14.1",
+    "moment": "^2.18.1",
     "numeral": "^2.0.4",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
     "react-copy-to-clipboard": "^4.2.1",
     "react-datepicker": "^0.44.0",
     "react-dropzone": "^3.11.0",
-    "react-fontawesome": "^1.5.0",
     "react-select": "^1.0.0-beta14",
     "short-number": "^1.0.6"
   },
