--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "0.24.2",
+  "version": "0.24.3",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
     "react-copy-to-clipboard": "^4.2.1",
-    "react-datepicker": "^0.44.0",
+    "react-datepicker": "./vendor/react-datepicker",
     "react-dropzone": "^3.11.0",
     "react-select": "^1.0.0-beta14",
     "short-number": "^1.0.6"
