--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-addons-test-utils": "~15.3.0",
     "react-dom": "~15.3.0",
     "react-router": "^3.0.0",
+    "react-svg-loader": "^1.1.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
     "stylelint": "^7.9.0",
