--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dropzone": "^3.11.0",
     "react-onclickoutside": "^5.11.1",
     "react-select": "^1.0.0-beta14",
+    "react-sticky": "^6.0.1",
     "short-number": "^1.0.6",
     "tether": "^1.4.0"
   },
