--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "0.25.5",
+  "version": "0.25.6",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -20,12 +20,13 @@
     "lodash": "^4.14.1",
     "moment": "^2.18.1",
     "numeral": "^2.0.4",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
     "react-copy-to-clipboard": "^4.2.1",
     "react-dropzone": "^3.11.0",
     "react-onclickoutside": "^5.11.1",
+    "react-overlays": "^0.7.0",
     "react-select": "^1.0.0-beta14",
     "react-sticky": "^6.0.1",
     "short-number": "^1.0.6",
