Add transform-class-properties - 1 step closer to tsc-compatible syntax
Also add missing babel-plugin-syntax-jsx dep.

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
     "stage-3"
   ],
   "plugins": [
+    "./transform-code-string",
+    "transform-class-properties",
     "transform-es2015-destructuring",
     "transform-object-assign",
     "transform-object-rest-spread",
