--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "babel-core": "~6.7.4",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-destructuring": "~6.9.0",
     "babel-plugin-transform-object-assign": "~6.5.0",
     "babel-plugin-transform-object-rest-spread": "~6.8.0",
