Add support for .ts[x] compilation.

--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,7 @@
     ["transform-runtime", {
       "helpers": false,
       "polyfill": false,
-      "regenerator": true,
+      "regenerator": true
     }]
   ]
 }
