--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "0.25.34",
+  "version": "0.25.35",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "core-js": "^2.4.1",
     "less": "^2.6.1",
     "lodash": "^4.14.1",
     "moment": "^2.18.1",
@@ -34,10 +35,21 @@
     "tether": "^1.4.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/jasmine": "^2.6.0",
+    "@types/jasmine-enzyme": "^3.6.0",
+    "@types/jest": "^20.0.8",
+    "@types/jest-matchers": "^20.0.0",
+    "@types/lodash": "^4.14.74",
+    "@types/node": "^8.0.28",
+    "@types/prop-types": "^15.5.1",
+    "@types/react": "Clever/minimal-react-typings#v2.0.0",
     "autoprefixer": "^6.5.3",
+    "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "~6.0.0",
     "babel-core": "~6.7.4",
     "babel-eslint": "^6.0.2",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -50,7 +62,7 @@
     "babel-preset-stage-3": "^6.22.0",
     "babel-register": "~6.7.2",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.2.0",
+    "enzyme": "^2.9.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-import-resolver-webpack": "^0.7.0",
@@ -58,6 +70,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "ignore-styles": "^5.0.1",
+    "jest-cli": "^21.1.0",
+    "jest-enzyme": "^3.8.2",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
     "jsx-loader": "^0.13.2",
@@ -73,6 +87,8 @@
     "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
     "stylelint": "^7.12.0",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.5.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
