--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.18.1",
     "numeral": "^2.0.4",
     "prop-types": "^15.5.10",
+    "rc-slider": "^8.3.1",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
     "react-copy-to-clipboard": "^4.2.1",
