--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
+    "focus-trap-react": "^3.0.4",
     "less": "^2.6.1",
     "lodash": "^4.14.1",
     "moment": "^2.18.1",
