--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "babel-register": "~6.7.2",
     "css-loader": "^0.23.1",
     "enzyme": "^2.9.1",
-    "eslint": "^2.7.0",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-import-resolver-webpack": "^0.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
