--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "prop-types": "^15.5.10",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
+    "react-collapsible": "^2.0.3",
     "react-copy-to-clipboard": "^4.2.1",
     "react-dropzone": "^3.11.0",
+    "react-fontawesome": "^1.6.1",
     "react-linkify": "^0.2.1",
     "react-onclickoutside": "^5.11.1",
     "react-overlays": "^0.7.0",
