Use react-accessible-accordion

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "moment": "^2.18.1",
     "numeral": "^2.0.4",
     "prop-types": "^15.5.10",
+    "react-accessible-accordion": "^1.0.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.0",
-    "react-collapsible": "^2.0.3",
     "react-copy-to-clipboard": "^4.2.1",
     "react-dropzone": "^3.11.0",
     "react-fontawesome": "^1.6.1",
