--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-linkify": "^0.2.1",
     "react-onclickoutside": "^5.11.1",
     "react-overlays": "^0.7.0",
-    "react-select": "^1.0.0-beta14",
+    "react-select": "^1.2.1",
     "react-sticky": "^6.0.1",
     "short-number": "^1.0.6",
     "tether": "^1.4.0"
