update DateInput and DatePicker to no longer use vendored components

--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "react-accessible-accordion": "^1.0.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-autosize-textarea": "^3.0.1",
-    "react-bootstrap": "^0.30.0",
+    "react-bootstrap": "^0.32.1",
     "react-copy-to-clipboard": "^4.2.1",
-    "react-datetime": "^2.12.0",
+    "react-datepicker": "1.2.2",
+    "react-datetime": "^2.14.0",
     "react-dropzone": "^3.11.0",
     "react-fontawesome": "^1.6.1",
     "react-linkify": "^0.2.1",
     "react-onclickoutside": "^5.11.1",
-    "react-overlays": "^0.7.0",
+    "react-overlays": "^0.8.3",
     "react-select": "^1.2.1",
     "react-sticky": "^6.0.1",
     "short-number": "^1.0.6",
