--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss-loader": "^1.1.1",
     "prismjs": "^1.5.1",
     "react": "~15.3.0",
+    "react-addons-test-utils": "^15.3.2",
     "react-dom": "~15.3.0",
     "react-router": "^3.0.0",
     "sinon": "^1.17.3",
