--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "babel-preset-stage-3": "^6.22.0",
     "babel-register": "~6.7.2",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15.4": "^1.0.5",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-import-resolver-webpack": "^0.7.0",
@@ -77,7 +78,7 @@
     "file-loader": "^0.8.5",
     "ignore-styles": "^5.0.1",
     "jest-cli": "^21.1.0",
-    "jest-enzyme": "^3.8.2",
+    "jest-enzyme": "^6.0.0",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
     "jsx-loader": "^0.13.2",
