upgrade to react 16

--- a/jestconfig.json
+++ b/jestconfig.json
@@ -5,6 +5,7 @@
     "/.*\/bin/",
     "/.*\/node_modules/"
   ],
+  "testURL": "http://localhost",
   "moduleFileExtensions": [
     "js",
     "json",
