--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "babel-register": "~6.7.2",
     "css-loader": "^0.23.1",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15.4": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-import-resolver-webpack": "^0.7.0",
@@ -77,7 +77,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "ignore-styles": "^5.0.1",
-    "jest-cli": "^21.1.0",
+    "jest-cli": "^22.4.3",
     "jest-enzyme": "^6.0.0",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
@@ -87,9 +87,9 @@
     "mocha": "^2.4.5",
     "postcss-loader": "^1.1.1",
     "prismjs": "^1.5.1",
-    "react": "~15.3.0",
+    "react": "^16.7.0",
     "react-addons-test-utils": "~15.3.2",
-    "react-dom": "~15.3.0",
+    "react-dom": "^16.7.0",
     "react-router": "^3.0.0",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
