--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "numeral": "^2.0.4",
     "prop-types": "^15.5.10",
     "react-accessible-accordion": "^1.0.2",
-    "react-transition-group": "~1.2.0",
+    "react-transition-group": "^1.2.1",
     "react-autosize-textarea": "^3.0.1",
     "react-bootstrap": "^0.32.1",
     "react-copy-to-clipboard": "^4.2.1",
