--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prop-types": "^15.5.10",
     "react-accessible-accordion": "^1.0.2",
     "react-autosize-textarea": "^3.0.1",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "0.32.1",
     "react-copy-to-clipboard": "^4.2.1",
     "react-datepicker": "1.2.2",
     "react-datetime": "^2.14.0",
