--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,5 @@ jobs:
           sudo pip install --upgrade awscli && aws --version
           pip install --upgrade --user awscli
         name: Install awscli for ECR publish
+    - run: if [ "${CIRCLE_BRANCH}" == "master" ]; then $HOME/ci-scripts/circleci/npm-publish $NPM_TOKEN .; fi;
+    - run: if [ "${CIRCLE_BRANCH}" == "master" ]; then $HOME/ci-scripts/circleci/s3-upload dist/css/ s3://assets.clever.com/design/; fi;
