--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
         command: |-
           if [ "${CIRCLE_BRANCH}" == "master" ]; then
             cd /tmp/ && wget https://bootstrap.pypa.io/get-pip.py && sudo python get-pip.py
+            sudo apt-get -y update
             sudo apt-get install python-dev
             sudo pip install --upgrade awscli && aws --version
             pip install --upgrade --user awscli
