--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -36,9 +36,6 @@ rules:
     - "smart"
 
   quotes: [2, "double", "avoid-escape"]
-  object-curly-spacing:
-    - 2
-    - "never"
   new-cap:
     - 2
     - newIsCapExceptions: ["kayvee.logger"]
@@ -62,3 +59,6 @@ rules:
     - "never"
 
   prefer-const: ["error", { "destructuring": "all" }]
+
+  indent:
+    - off
