--- a/package.json
+++ b/package.json
@@ -52,21 +52,21 @@
     "@types/react": "Clever/minimal-react-typings#v3.1.1",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "^3.2.3",
-    "babel-cli": "~6.0.0",
-    "babel-core": "~6.7.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^6.0.2",
     "babel-jest": "^21.0.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-destructuring": "~6.9.0",
-    "babel-plugin-transform-object-assign": "~6.5.0",
-    "babel-plugin-transform-object-rest-spread": "~6.8.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "~6.6.0",
-    "babel-preset-react": "~6.5.0",
-    "babel-preset-stage-3": "^6.22.0",
-    "babel-register": "~6.7.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
     "css-loader": "^0.23.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.7.1",
