--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@types/node": "^8.0.28",
     "@types/prop-types": "^15.5.1",
     "@types/react": "Clever/minimal-react-typings#v3.1.1",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "^6.26.0",
@@ -70,7 +72,7 @@
     "css-loader": "^0.23.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^3.19.0",
+    "eslint": "5.x",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-plugin-react": "^4.2.3",
@@ -95,7 +97,7 @@
     "style-loader": "^0.13.0",
     "stylelint": "^7.12.0",
     "ts-node": "^3.3.0",
-    "typescript": "^2.5.2",
+    "typescript": "3.x",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
