--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,11 @@
     "allowJs": true,
     "baseUrl": "./",
     "jsx": "react",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "module": "commonjs",
     "noUnusedLocals": true,
     "noImplicitAny": false,
     "target": "es5"
   },
-  "exclude": [
-    "./dist",
-    "./node_modules"
-  ]
+  "exclude": ["./dist", "./node_modules"]
 }
