--- a/tsconfig.docs.json
+++ b/tsconfig.docs.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
+    "allowJs": true,
+    "declaration": false,
     "types": ["prop-types", "react"]
   },
   "exclude": [
