--- a/package.json
+++ b/package.json
@@ -107,6 +107,6 @@
     "react-dom": ">=16.0.0 <17.0.0"
   },
   "scripts": {
-    "dev-server": "node_modules/.bin/webpack-dev-server --host 0.0.0.0 --port 5010 --content-base docs/ --inline --watch"
+    "dev-server": "node_modules/.bin/webpack-dev-server"
   }
 }
