--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^10.14.8",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^16.8.20",
+    "@types/react-datepicker": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "autoprefixer": "^6.5.3",
