--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/lodash": "^4.14.74",
     "@types/node": "^10.14.8",
     "@types/prop-types": "^15.5.1",
-    "@types/react": "Clever/minimal-react-typings#v3.1.1",
+    "@types/react": "^16.8.20",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "autoprefixer": "^6.5.3",
