--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "commonjs",
     "noUnusedLocals": true,
     "noImplicitAny": false,
-    "target": "es5"
+    "target": "es5",
+    "types": ["jest", "node"]
   },
   "exclude": ["./dist", "./node_modules"]
 }
