disable eslint no-use-before-define

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -47,13 +47,8 @@ rules:
     - 2
     - mode: "minimum"
 
-  # Allow functions and classes to be declared after they are referenced.
-  # This enables us to define more important public functions/classes toward the top of a file and
-  # less relevant private helpers below.
   no-use-before-define:
-    - 2
-    - classes: false
-      functions: false
+    - off
 
   react/jsx-curly-spacing:
     - 2
@@ -70,3 +65,4 @@ rules:
 
   space-before-function-paren:
     - off
+
