--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "noUnusedLocals": true,
     "noImplicitAny": false,
     "target": "es5",
-    "types": ["jest", "node"]
+    "types": ["jest"]
   },
   "exclude": ["./dist", "./node_modules"]
 }
