--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
     "@types/classnames": "^2.2.3",
+    "@types/lodash": "^4.14.74",
+    "@types/node": "^12.6.2",
+    "@types/prop-types": "^15.5.1",
+    "@types/react-datepicker": "^1.8.0",
+    "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "focus-trap-react": "^6.0.0",
     "less": "^3.8.1",
     "lodash": "^4.14.1",
-    "@types/lodash": "^4.14.74",
     "moment": "^2.18.1",
     "numeral": "^2.0.4",
     "prop-types": "^15.5.10",
-    "@types/prop-types": "^15.5.1",
     "react-accessible-accordion": "^1.0.2",
     "react-autosize-textarea": "^7.0.0",
     "react-bootstrap": "0.32.1",
     "react-copy-to-clipboard": "^4.3.1",
     "react-datepicker": "~1.6.0",
-    "@types/react-datepicker": "^1.8.0",
     "react-datetime": "^2.14.0",
     "react-dropzone": "^3.11.0",
     "react-fontawesome": "^1.6.1",
