Fix new component script (#416)

--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
     "@types/classnames": "^2.2.3",
+    "@types/lodash": "^4.14.74",
+    "@types/prop-types": "^15.5.1",
+    "@types/react-datepicker": "^1.8.0",
+    "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "focus-trap-react": "^6.0.0",
     "less": "^3.8.1",
     "lodash": "^4.14.1",
-    "@types/lodash": "^4.14.74",
     "moment": "^2.18.1",
     "numeral": "^2.0.4",
     "prop-types": "^15.5.10",
-    "@types/prop-types": "^15.5.1",
     "react-accessible-accordion": "^1.0.2",
     "react-autosize-textarea": "^7.0.0",
     "react-bootstrap": "0.32.1",
     "react-copy-to-clipboard": "^4.3.1",
     "react-datepicker": "~1.6.0",
-    "@types/react-datepicker": "^1.8.0",
     "react-datetime": "^2.14.0",
     "react-dropzone": "^3.11.0",
     "react-fontawesome": "^1.6.1",
@@ -47,6 +47,8 @@
   "devDependencies": {
     "@types/jest": "^20.0.8",
     "@types/jest-matchers": "^20.0.0",
+    "@types/node": "^10.14.12",
+    "@types/react": "^16.8.6",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "autoprefixer": "^6.5.3",
@@ -88,7 +90,6 @@
     "prettier": "1.16.4",
     "prismjs": "^1.5.1",
     "react": "^16.8.6",
-    "@types/react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^3.0.0",
     "sinon": "^1.17.3",
