Add Autosuggest component

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/classnames": "^2.2.3",
     "@types/lodash": "^4.14.74",
     "@types/prop-types": "^15.5.1",
+    "@types/react-autosuggest": "^9.3.9",
     "@types/react-datepicker": "^1.8.0",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
@@ -31,6 +32,7 @@
     "prop-types": "^15.5.10",
     "react-accessible-accordion": "^1.0.2",
     "react-autosize-textarea": "^7.0.0",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "0.32.1",
     "react-copy-to-clipboard": "^4.3.1",
     "react-datepicker": "~1.6.0",
