increasing heap size for less crashes

--- a/package.json
+++ b/package.json
@@ -108,6 +108,6 @@
     "react-dom": ">=16.0.0 <17.0.0"
   },
   "scripts": {
-    "dev-server": "node_modules/.bin/webpack-dev-server"
+    "dev-server": "NODE_OPTIONS=--max_old_space_size=4096 node_modules/.bin/webpack-dev-server"
   }
 }
