build es6 modules for components to enable tree shaking

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
     "allowJs": false,
     "declaration": true,
     "outDir": "./dist",
+    "moduleResolution": "node"
   },
   "exclude": [
     "./assets",
