--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "license": "Apache-2.0",
   "main": "dist/index.js",
+  "module": "dist/es/index.js",
+  "sideEffects": [
+    "*.css", "*.less"
+  ],
   "types": "dist/index.d.ts",
   "bugs": {
     "url": "https://github.com/Clever/components/issues"
