--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "2.30.1",
+  "version": "2.31.0",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -10,7 +10,8 @@
   "main": "dist/index.js",
   "module": "dist/es/index.js",
   "sideEffects": [
-    "*.css", "*.less"
+    "*.css",
+    "*.less"
   ],
   "types": "dist/index.d.ts",
   "bugs": {
