Potentially moving bulk actions to a second row

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-select": "~1.2.1",
     "react-sticky": "^6.0.1",
     "react-transition-group": "~1.2.0",
+    "react-responsive": "^8.0.3",
     "short-number": "^1.0.6",
     "tether": "^1.4.0"
   },
