--- a/package.json
+++ b/package.json
@@ -54,32 +54,25 @@
     "tether": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "@types/jest": "^20.0.8",
     "@types/jest-matchers": "^20.0.0",
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.49",
     "@types/react-datepicker": "^1.8.0",
     "@types/react-linkify": "^1.0.0",
+    "@types/webpack": "^4.41.26",
+    "@types/webpack-dev-server": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
-    "autoprefixer": "^6.5.3",
-    "awesome-typescript-loader": "^3.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^6.0.2",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^6.2.4",
+    "autoprefixer": "^10.2.4",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "css-loader": "^0.23.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "5.x",
@@ -94,11 +87,11 @@
     "jest-enzyme": "^6.0.0",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
-    "jsx-loader": "^0.13.2",
-    "less-loader": "^4.1.0",
+    "less-loader": "^8.0.0",
     "lorem-ipsum": "^1.0.3",
     "mocha": "^2.4.5",
-    "postcss-loader": "^1.1.1",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
     "prettier": "2.1.2",
     "prismjs": "^1.5.1",
     "react": "^16.8.6",
@@ -106,13 +99,14 @@
     "react-router": "^3.0.0",
     "recast": "^0.20.4",
     "sinon": "^1.17.3",
-    "style-loader": "^0.13.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^7.12.0",
     "ts-node": "^3.3.0",
     "typescript": "3.x",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "peer-dependencies": {
     "@types/react": ">=16.0.0 <17.0.0",
@@ -120,6 +114,6 @@
     "react-dom": ">=16.0.0 <17.0.0"
   },
   "scripts": {
-    "dev-server": "NODE_OPTIONS=--max_old_space_size=4096 node_modules/.bin/webpack-dev-server"
+    "dev-server": "NODE_OPTIONS=--max_old_space_size=4096 npx webpack serve --mode=development"
   }
 }
