npm install jscodeshift

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/preset-react": "^7.12.13",
     "@types/jest": "^20.0.8",
     "@types/jest-matchers": "^20.0.0",
+    "@types/jscodeshift": "^0.11.0",
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.49",
     "@types/react-datepicker": "^1.8.0",
@@ -85,6 +86,7 @@
     "ignore-styles": "^5.0.1",
     "jest-cli": "^22.4.3",
     "jest-enzyme": "^6.0.0",
+    "jscodeshift": "^0.11.0",
     "jsdom": "^8.4.0",
     "jsdom-global": "^1.7.0",
     "less-loader": "^8.0.0",
